--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "firebase": "^9.8.2",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
