--- a/package.json
+++ b/package.json
@@ -15,9 +15,28 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@tiptap/extension-blockquote": "^2.0.0-beta.29",
+    "@tiptap/extension-bold": "^2.0.0-beta.28",
+    "@tiptap/extension-bullet-list": "^2.0.0-beta.29",
+    "@tiptap/extension-code": "^2.0.0-beta.28",
+    "@tiptap/extension-code-block": "^2.0.0-beta.42",
+    "@tiptap/extension-hard-break": "^2.0.0-beta.33",
+    "@tiptap/extension-heading": "^2.0.0-beta.29",
+    "@tiptap/extension-history": "^2.0.0-beta.26",
+    "@tiptap/extension-horizontal-rule": "^2.0.0-beta.36",
+    "@tiptap/extension-italic": "^2.0.0-beta.28",
+    "@tiptap/extension-link": "^2.0.0-beta.43",
+    "@tiptap/extension-list-item": "^2.0.0-beta.23",
+    "@tiptap/extension-ordered-list": "^2.0.0-beta.30",
+    "@tiptap/extension-strike": "^2.0.0-beta.29",
+    "@tiptap/extension-underline": "^2.0.0-beta.25",
+    "@tiptap/starter-kit": "^2.0.0-beta.191",
+    "@tiptap/vue-3": "^2.0.0-beta.96",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "firebase": "^9.8.2",
+    "pinia": "^2.0.16",
+    "pinia-plugin-persistedstate": "^1.6.3",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-moment": "^4.1.0",
