2022년 발자취 및 교역자 추가

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nanoom-web",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "나눔의교회 - 두날개로 날아오르는 건강한 교회",
-  "productName": "나눔의교회",
+  "productName": "나눔의교회 - 서울시 중구",
   "author": "duwon <duwon@duwon.net>",
   "private": true,
   "scripts": {
